# Whitehole3

./: .env.template  .gitignore  :w  Cargo.toml  README.md  Rocket.toml.template  vetur.config.js  whitehole.ftl
fluent_const/: Cargo.toml
fluent_const/src/: lib.rs
migrations/: 20210526165058_init.sql  20210721194934_permissions.sql  20210722204003_array_func.sql  20210723183218_array_distinct.sql  20210728214428_role_permission.sql  20210730154507_playlist.sql  20210803133237_random_func.sql  20210803134634_user_points.sql  20210807164856_role_points.sql  20210824170804_guild_config.sql  20210824170804_guild_options.sql
src/: main.rs  music.rs
wh_config/: Cargo.toml
wh_config/examples/: simple_json.rs
wh_config/src/: module.rs  shared.rs
wh_core/: Cargo.toml
wh_core/src/: event_handler.rs  lib.rs  macros.rs
wh_database/: Cargo.toml  build.rs
wh_database/src/: lib.rs  shared.rs
wh_main/: Cargo.toml
wh_main/src/: event_handler.rs  main.rs
wh_music/: Cargo.toml
wh_music/src/: lib.rs  module.rs  shared.rs
wh_music/src/commands/: clear.rs  join.rs  leave.rs  loop_cmd.rs  mod.rs  move_cmd.rs  pause.rs  play.rs  playlist.rs  queue.rs  remove.rs  resume.rs  skip.rs
wh_options/: Cargo.toml
wh_options/src/: lib.rs  shared.rs
wh_permission/: Cargo.toml
wh_permission/src/: lib.rs  module.rs  shared.rs
wh_permission/src/commands/: mod.rs  permission.rs
wh_permission/src/shared/: mod.rs  role_permission.rs  user_permission.rs
wh_points/: Cargo.toml
wh_points/src/: event_handler.rs  lib.rs  module.rs  shared.rs
wh_points/src/commands/: mod.rs  points.rs  rank.rs  top.rs
wh_webserver/: Cargo.toml
wh_webserver/app/: package-lock.json  package.json  vue.config.js
wh_webserver/app/src/: App.vue
wh_webserver/src/: api.rs  error.rs  lib.rs  main.rs
