[package]
edition = "2018"
name = "whitehole3"
version = "0.1.0"
[dependencies]
async-trait = "0.1.50"
chrono = "0.4.19"
dotenv = "*"
log = "0.4.14"
once_cell = "*"
songbird = "*"
url = "*"

[dependencies.fern]
features = ["colored"]
version = "0.6.0"

[dependencies.serenity]
default-features = false
features = ["voice", "gateway", "builder", "cache", "framework", "http", "model", "utils", "standard_framework", "rustls_backend"]
version = "0.10.5"

[dependencies.sqlx]
default-features = false
features = ["sqlite", "postgres", "runtime-tokio-rustls", "chrono"]
version = "0.5.2"

[dependencies.tokio]
default-features = false
features = ["full"]
version = "1.0"
