[package]
name = "wh_config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wh_core =       { path = "../wh_core" }
wh_database =   { path ="../wh_database" }
log = "0.4.14"
serenity = "0.10.9"
serde_json = "1.0.66"
serde = {version= "1.0.129", features=["derive"]}
tokio = {version="1.0", features=["full"]}

[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "json"]
version = "0.5.2"
