[package]
name = "wh_core"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"



[dependencies]
async-trait = "0.1.50"
log = "0.4.14"
once_cell = "1.8.0"

[dependencies.fern]
features = ["colored"]
version = "0.6.0"

[dependencies.serenity]
default-features = false
features = ["cache", "http", "model", "rustls_backend"]
version = "0.10.5"


