[package]
name = "wh_database"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity="0.10.5"
chrono = "0.4.19"
log="0.4.14"
wh_core={path="../wh_core"}


[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "migrate"]
version = "0.5.2"
