[package]
name = "wh_database"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log="0.4.14"
wh_core={path="../wh_core"}


[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros", "migrate"]
version = "0.5.2"

[dependencies.serenity]
default-features = false
features = ["cache", "http", "model", "rustls_backend"]
version = "0.10.5"