[package]
name = "wh_main"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wh_core =       { path = "../wh_core" }
wh_database =   { path = "../wh_database" }
wh_music =      { path = "../wh_music" }
wh_points =     { path = "../wh_points" }
wh_permission = { path = "../wh_permission" }
wh_webserver =  { path = "../wh_webserver" }
fluent_const =  { path = "../fluent_const" }


dotenv="0.15.0"
tokio="1.5.0"
log="0.4.14"
serenity="0.10.5"
fern="0.6.0"
chrono="0.4.19"
rocket = "0.5.0-rc"
