[package]
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"
name = "wh_music"
version = "0.1.0"
[dependencies]
chrono = "0.4.19"
log = "0.4.14"
serde = {version="1.0.126", features=["derive"]}
serenity = "0.10.5"
url = "2.2.1"
reqwest = "0.11.3"
serde_json= "1.0.64"
concread = "0.2.14"
once_cell = "1.8.0"
aspotify = "0.7.0"


[dependencies.songbird]
version = "0.1.6"
features=["builtin-queue"]

[dependencies.wh_core]
path = "../wh_core"

[dependencies.wh_database]
path = "../wh_database"

[dependencies.wh_permission]
path = "../wh_permission"

[dependencies.tokio]
version="1.0"
features=["full"]
[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"]
version = "0.5.2"
