[package]
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2021"
name = "wh_music"
version = "0.1.0"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
serde = {version="1.0.126", features=["derive"]}
serenity = "0.10.5"
url = "2.2.1"
reqwest = "0.11.6"
serde_json= "1.0.64"
concread = "0.2.14"
once_cell = "1.8.0"
aspotify = "0.7.0"
rand = "0.8.4"
deezer = "0.1.0"
hound = "3.4.0"
arrayvec = "0.7.2"
dotenv = "0.15.0"


[dependencies.songbird]
version = "0.2.0"
features=["builtin-queue"]

[dependencies.wh_core]
path = "../wh_core"

[dependencies.wh_database]
path = "../wh_database"

[dependencies.wh_permission]
path = "../wh_permission"

[dependencies.fluent_const]
path = "../fluent_const"

[dependencies.tokio]
version="1.0"
features=["full"]
[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros"]
version = "0.5.2"
