[package]
name = "wh_points"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serenity = "0.10.7"
sqlx = "0.5.3"
wh_core={path="../wh_core"}
wh_database={path="../wh_database"}