[package]
name = "wh_points"
version = "0.1.0"
authors = ["Maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serenity = "0.10.7"
once_cell= "1.8.0"
reqwest= "0.11.4"
dotenv= "0.15.0"
wh_core       =  { path = "../wh_core"       }
wh_database   =  { path = "../wh_database"   }
wh_permission =  { path = "../wh_permission" }
fluent_const  =  { path = "../fluent_const"  }

[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"]
version = "0.5.2"