[package]
name = "wh_webserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
resvg = "0.15.0"
serenity = "0.10.8"
usvg = "0.15.0"

wh_core = { path = "../wh_core" }
wh_database = {path = "../wh_database" }
tiny-skia = "0.5.1"
reqwest = "0.11.4"
base64 = "0.13.0"
urlencoding = "2.1.0"
url = "2.2.2"

[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"]
version = "0.5.2"

[dependencies.rocket]
version="0.5.0-rc.1"
features=["secrets"]
