[package]
name = "wh_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
resvg = "0.19.0"
usvg = "0.19.0"
dotenv = "0.15.0"
rocket_oauth2 = "0.5.0-rc.1"

wh_core =       { path = "../wh_core"       }
wh_database =   { path = "../wh_database"   }
wh_config =     { path = "../wh_config"     }
wh_music =      { path = "../wh_music"      }
tiny-skia = "0.6.0"
reqwest = "0.11.4"
base64 = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
chrono = "0.4.19"

[dependencies.sqlx]
default-features = false
features = ["postgres", "runtime-tokio-rustls", "macros"]
version = "0.5.2"

[dependencies.rocket]
version="0.5.0-rc.1"
features=["secrets", "json"]

[dependencies.serenity]
default-features = false
features = ["cache", "http", "model", "rustls_backend"]
version = "0.10.5"
